--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,7 +1,7 @@
 {
   "meta": {
     "username": "raden",
-    "repositoryName": "najmi.hubpress.io",
+    "repositoryName": "raden.hubpress.io",
     "branch": "gh-pages"
   },
   "theme": {
